--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Carbon Calculator</title>
+    <title>Minimum Wage Calculator</title>
     <script type="text/javascript" charset="utf-8">
 
       function onBodyLoad() {
@@ -119,7 +119,7 @@
   </head>
   
   <body onload="onBodyLoad()">
-    <h1>Carbon Calculator</h1>
+    <h1>Minimum Wage Calculator</h1>
 
     <p>
       How many people are in your household? <br />
