--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
         // Display user inputs
         dvUserInputs.innerHTML = "Your  information: <br /> ";
-        dvUserInputs.innerHTML += "&nbsp; " + iNumPeople.toString() + " people<br />";
-        dvUserInputs.innerHTML += "&nbsp; " + slcEmployerSize.value + " <br />";
+        dvUserInputs.innerHTML += "&nbsp; " + iNumPeople.toString() + " people at your employer across the USA<br />";
+        dvUserInputs.innerHTML += "&nbsp; " + slcEmployerSize.text + " <br />";
 
         // Calculate minimum wage
         var SelectedMinWageSchedule;
@@ -89,7 +89,7 @@
       B) Select the size of your employer <br />
       <select id="slcEmployerSize">
         <option value="A">More than 500 employees in the U.S.</option>
-        <option value="B">More than 500 emp1loyees in the U.S. AND provides medical benefits to YOU</option>
+        <option value="B">More than 500 employees in the U.S. AND provides medical benefits to YOU</option>
         <option value="C">500 or fewer employees in the U.S. AND employer provides minimum compensation</option>
         <option value="D">500 or fewer employees in the U.S.</option>
       </select>
