--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         // Display user inputs
         dvUserInputs.innerHTML = "Your  information: <br /> ";
         dvUserInputs.innerHTML += "&nbsp; " + iNumPeople.toString() + " people at your employer across the USA<br />";
-        dvUserInputs.innerHTML += "&nbsp; " + slcEmployerSize.text + " <br />";
+        dvUserInputs.innerHTML += "&nbsp; " + slcEmployerSize.selected.text + " <br />";
 
         // Calculate minimum wage
         var SelectedMinWageSchedule;
@@ -59,6 +59,9 @@
         dvOutput.innerHTML = "The minimum wage now is: $" + SelectedMinWageSchedule[0].toFixed(2) + "<br />";
         dvOutput.innerHTML += "Upcoming increases: <br />";
         dvOutput.innerHTML += "April 1, 2015: $" + SelectedMinWageSchedule[1].toFixed(2) + "<br />";
+        for (iYearsFromNow = 2; iYearsFromNow < SelectedMinWagesSchedule.length; iYearsFromNow++) {
+          alert (iYearsFromNow);
+        }
         // NOTE: toPrecision() is # of significant figures; toFixed() is # of fixed decimal places
 
         //alert("The minimum wage now is: $" + SelectedMinWageSchedule[0].toString() );
