--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         dvOutput.innerHTML = "The minimum wage now is: $" + SelectedMinWageSchedule[0].toFixed(2) + "<br />";
         dvOutput.innerHTML += "Upcoming increases: <br />";
         dvOutput.innerHTML += "April 1, 2015: $" + SelectedMinWageSchedule[1].toFixed(2) + "<br />";
-        alert( SelectedMinWagesSchedule.length );
-        for (iYearsFromNow = 2; iYearsFromNow < SelectedMinWagesSchedule.length; iYearsFromNow++) {
+        alert( SelectedMinWageSchedule.length );
+        for (iYearsFromNow = 2; iYearsFromNow < SelectedMinWageSchedule.length; iYearsFromNow++) {
           alert (iYearsFromNow);
         }
         // NOTE: toPrecision() is # of significant figures; toFixed() is # of fixed decimal places
