--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         dvOutput.innerHTML = "The minimum wage now is: $" + SelectedMinWageSchedule[0].toFixed(2) + "<br />";
         dvOutput.innerHTML += "Upcoming increases: <br />";
         dvOutput.innerHTML += "April 1, 2015: $" + SelectedMinWageSchedule[1].toFixed(2) + "<br />";
-        alert( SelectedMinWageSchedule.length );
-        for (iYearsFromNow = 2; iYearsFromNow < SelectedMinWageSchedule.length; iYearsFromNow++) {
-          alert (iYearsFromNow);
+        // alert( SelectedMinWageSchedule.length );
+        for (iYearsFrom2014 = 2; iYearsFrom2014 < SelectedMinWageSchedule.length; iYearsFrom2014++) {
+          dvOutput.innerHTML += "January 1, " + 2014+iYearsFrom2014 + ": $" + SelectedMinWageSchedule[iYearsFrom2014].toFixed(2) + "<br />";
         }
         // NOTE: toPrecision() is # of significant figures; toFixed() is # of fixed decimal places
 
