--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   </head>
   
   <body onload="onBodyLoad()">
-    <h1>Minimum Wage Calculator</h1>
-
+    <h1>Whats my minimum wage?</h1>
+    <p>Answer a few questions to see what minimum wage applies to you.</p>
     <p>
       A) 
       How many people work at your employer across the USA?<br />
