Fix incorrect date range for start of minimum wage. Change report link to direct to seattle.gov.

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -52,7 +52,7 @@
             {{/each}}
         </ul>
         <div class="center question-prompt">Are you making less than this per hour? You may be a victim of wage theft. Please take action and:</div>
-        <a href="#" class="btn btn-block btn-contrast">Report It!</a>
+        <a href="http://www.seattle.gov/civilrights/labor-standards/wage-theft" class="btn btn-block btn-contrast">Report It!</a>
     </div>
   </script>
 
